infra/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: keep-a-changelog
  name: keep-a-changelog
spec:
  replicas: 1
  selector:
    matchLabels:
      run: keep-a-changelog
  strategy: {}
  template:
    metadata:
      labels:
        run: keep-a-changelog
    spec:
      containers:
      - image: eritikass/changelog:latest
        imagePullPolicy: Always
        name: keep-a-changelog
        ports:
        - containerPort: 8080
        resources: {}
status: {}
